After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 763112 - gstbuffer: fix GstParentBufferMeta GType name
gstbuffer: fix GstParentBufferMeta GType name
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
unspecified
Other All
: Normal normal
: 1.7.91
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-03-04 17:27 UTC by Víctor Manuel Jáquez Leal
Modified: 2016-03-11 15:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gstbuffer: fix GstParentBufferMeta GType name (952 bytes, patch)
2016-03-04 17:28 UTC, Víctor Manuel Jáquez Leal
none Details | Review
gstbuffer: fix GstParentBufferMeta GType name (2.18 KB, patch)
2016-03-07 11:06 UTC, Víctor Manuel Jáquez Leal
committed Details | Review

Description Víctor Manuel Jáquez Leal 2016-03-04 17:27:55 UTC
The alias define GST_TYPE_PARENT_BUFFER_META_API_TYPE is wrong and
breaks the usage of gst_buffer_get_parent_buffer_meta()
Comment 1 Víctor Manuel Jáquez Leal 2016-03-04 17:28:00 UTC
Created attachment 323113 [details] [review]
gstbuffer: fix GstParentBufferMeta GType name
Comment 2 Nicolas Dufresne (ndufresne) 2016-03-04 17:39:14 UTC
Review of attachment 323113 [details] [review]:

::: gst/gstbuffer.h
@@ -599,2 +599,2 @@
 GType gst_parent_buffer_meta_api_get_type (void);
-#define GST_TYPE_PARENT_BUFFER_META_API_TYPE (gst_parent_buffer_meta_api_get_type())
+#define GST_PARENT_BUFFER_META_API_TYPE (gst_parent_buffer_meta_api_get_type())

Both seems out of convention, GST_TYPE_PARENT_BUFFER_META_API would be by the book from a GObject point of view. Was this macro released into our API already ?
Comment 3 Tim-Philipp Müller 2016-03-04 17:44:22 UTC
It seems that for metas GST_FOO_BAR_META_API_TYPE is the convention.
Comment 4 Nicolas Dufresne (ndufresne) 2016-03-04 19:10:22 UTC
(quite wrong isn't it ;-P) What about the API break that this is, was that released in 1.6 ?
Comment 5 Sebastian Dröge (slomo) 2016-03-05 07:59:33 UTC
Comment on attachment 323113 [details] [review]
gstbuffer: fix GstParentBufferMeta GType name

As this was part of 1.6, we need to keep around the old one. Can you add the new one, deprecate the old one (including #ifndef GST_DISABLE_DEPRECATED)?
Comment 6 Víctor Manuel Jáquez Leal 2016-03-07 11:06:53 UTC
Created attachment 323250 [details] [review]
gstbuffer: fix GstParentBufferMeta GType name

The alias define GST_TYPE_PARENT_BUFFER_META_API_TYPE is wrong and
breaks the usage of gst_buffer_get_parent_buffer_meta().

This patch fixes the GType alias and make another alias to keep the API
compatibility guarded by GST_DISABLE_DEPRECATED.

Also added a unit test.
Comment 7 Víctor Manuel Jáquez Leal 2016-03-07 12:38:29 UTC
Attachment 323250 [details] pushed as c1f2775 - gstbuffer: fix GstParentBufferMeta GType name